k8s/overlays/gcp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: channel-connect
  namespace: channel-connect
  annotations:
    kubernetes.io/ingress.global-static-ip-name: channel-connect-ip
    networking.gke.io/managed-certificates: channel-connect-cert
    networking.gke.io/v1beta1.FrontendConfig: channel-connect-frontend
spec:
  defaultBackend:
    service:
      name: channel-connect
      port:
        number: 80
